调整目录结构

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Argon2id 密码生成器</title>
     <script>
         // 设置wasm文件路径
-        window.argon2WasmPath = 'js/argon2.wasm';
+        window.argon2WasmPath = 'argon2-browser/dist/argon2.wasm';
     </script>
-    <script src="js/argon2.js"></script>
+    <script src="argon2-browser/lib/argon2.js"></script>
     <script>
         window.addEventListener('load', function() {
             if (typeof argon2 === 'undefined') {
