--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
                     }
                     
                     // 使用Argon2id生成哈希
-                    const result = await argon2.hash({
+                    const hashResult = await argon2.hash({
                         pass: combined,
                         salt: salt,
                         time: timeCost,
@@ -288,7 +288,7 @@
                     
                     // 将哈希转换为密码
                     const password = convertHashToPassword(
-                        result.hash,
+                        hashResult.hash,
                         passwordLength,
                         useLowercase,
                         useUppercase,
