--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         .password-display {
             font-family: monospace;
             font-size: 18px;
-            overflow-wrap: break-word;
+            overflow-wrap: nowrap;
+            white-space: nowrap;
+            overflow-x: auto;
             margin: 10px 0;
         }
         .options {
